# chop

./: Cargo.toml
src/: asyncv.rs  config.rs  deserialize.rs  error.rs  lib.rs  main.rs  manifest.rs  output.rs  search.rs  syncv.rs
test/: mod.rs
tests/: debug.sh  release.sh
