[package]
name = "chop"
description = "Enhance `scoop search` and `scoop info`"
version = "3.0.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
ratatui = "0.29.0"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[[test]]
name = "test_mod"
path = "test/mod.rs"
