[package]
name = "chop"
description = "Enhance `scoop search` and `scoop info`"
version = "3.0.0"
edition = "2024"

[profile.dev]
opt-level = 3
debug = false
strip = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
ratatui = "0.29.0"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
